progress on feature engineering
Created two another BASELINES using LogisticReg and LightGBM

--- a/notebooks/1.0-tg-initial-EDA.ipynb
+++ b/notebooks/1.0-tg-initial-EDA.ipynb
@@ -413,7 +413,8 @@
     "plt.bar(x=age_groups_count[age_groups_count['TARGET'] == 0]['YEARS_BINNED'].values.astype('str'),\n",
     "        height=age_groups_count[age_groups_count['TARGET'] == 0]['DAYS_BIRTH'], label='Repaid', width=1)\n",
     "plt.bar(x=age_groups_count[age_groups_count['TARGET'] == 1]['YEARS_BINNED'].values.astype('str'),\n",
-    "        height=age_groups_count[age_groups_count['TARGET'] == 1]['DAYS_BIRTH'], label='Default', width=1)\n",
+    "        height=age_groups_count[age_groups_count['TARGET'] == 1]['DAYS_BIRTH'], label='Default', width=1, \n",
+    "        bottom=age_groups_count[age_groups_count['TARGET'] == 0]['DAYS_BIRTH'])\n",
     "plt.xticks(rotation=45)\n",
     "plt.legend()\n",
     "plt.show()"
@@ -894,6 +895,49 @@
    "outputs": [],
    "source": [
     "previous['CODE_REJECT_REASON'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "POS cash balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cash[cash['SK_ID_CURR'] == 204829]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cash[cash['SK_ID_CURR'] == 386051]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "installments[installments['SK_ID_CURR'] == 204829]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "installments[installments['SK_ID_CURR'] == 386051]"
    ]
   },
   {
