--- a/notebooks/1.0-tg-initial-EDA.ipynb
+++ b/notebooks/1.0-tg-initial-EDA.ipynb
@@ -303,8 +303,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_train['TARGET']"
+    "app_train[app_train['TARGET'] == 1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app_train[app_train['TARGET'] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
