Restarting analysis and add pipeline to handle column transformation

--- a/notebooks/1.0-tg-initial-EDA.ipynb
+++ b/notebooks/1.0-tg-initial-EDA.ipynb
@@ -316,13 +316,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -486,6 +479,36 @@
     "# Heatmap of correlations\n",
     "sns.heatmap(ext_data_corrs, cmap=plt.cm.RdYlBu_r, vmin=-0.25, annot=True, vmax=0.6)\n",
     "plt.title('Correlation Heatmap');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.kdeplot(ext_data[ext_data['TARGET'] == 0]['EXT_SOURCE_1'], label='repaid')\n",
+    "sns.kdeplot(ext_data[ext_data['TARGET'] == 1]['EXT_SOURCE_1'], label='default')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.kdeplot(ext_data[ext_data['TARGET'] == 0]['EXT_SOURCE_2'], label='repaid')\n",
+    "sns.kdeplot(ext_data[ext_data['TARGET'] == 1]['EXT_SOURCE_2'], label='default')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.kdeplot(ext_data[ext_data['TARGET'] == 0]['EXT_SOURCE_3'], label='repaid')\n",
+    "sns.kdeplot(ext_data[ext_data['TARGET'] == 1]['EXT_SOURCE_3'], label='default')"
    ]
   },
   {
@@ -961,7 +984,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "app_train['AMT_CREDIT'] / app_train['AMT_INCOME_TOTAL'] * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distplot(app_train['AMT_CREDIT'] / app_train['AMT_INCOME_TOTAL'])"
+   ]
   }
  ],
  "metadata": {
