--- a/notebooks/4.0-tg-models-comparison.ipynb
+++ b/notebooks/4.0-tg-models-comparison.ipynb
@@ -7,21 +7,22 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "import xgboost as xbgµ\n",
     "import lightgbm as lgb\n",
+    "\n",
+    "# sklearn API like\n",
+    "from ngboost import NGBRegressor\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import optuna \n",
-    "from optuna.visualization import plot_intermediate_values\n",
     "\n",
-    "import missingno as msno\n",
     "\n",
     "sns.set()"
    ]
@@ -32,7 +33,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = pd.read_csv('../data/processed/features.csv')\n",
+    "features = pd.read_csv('../data/processed/features.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "app_train_sample = pd.read_csv('../data/raw/application_train.csv', nrows=1)"
    ]
   },
@@ -43,15 +52,6 @@
    "outputs": [],
    "source": [
     "categ_var = ['NAME_CONTRACT_TYPE', 'CODE_GENDER', 'OCCUPATION_TYPE']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "msno.matrix(features)"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "msno.matrix(features)"
+    "features['DAYS_BIRTH'] = - features['DAYS_BIRTH'] / 365"
    ]
   },
   {
@@ -98,14 +98,14 @@
    "source": [
     "imputer = SimpleImputer(strategy='median')\n",
     "scaler = MinMaxScaler(feature_range=(0, 1))\n",
-    "imputer.fit(train)\n",
-    "scaler.fit(train)\n",
+    "imputer.fit(train.select_dtypes(exclude='int64'))\n",
+    "scaler.fit(train.select_dtypes(exclude='int64'))\n",
     "\n",
-    "train = imputer.transform(train)\n",
-    "test = imputer.transform(test)\n",
+    "train.loc[:, train.select_dtypes(exclude='int64').columns] = imputer.transform(train.select_dtypes(exclude='int64'))\n",
+    "test.loc[:, test.select_dtypes(exclude='int64').columns]  = imputer.transform(test.select_dtypes(exclude='int64'))\n",
     "\n",
-    "train = scaler.transform(train)\n",
-    "test = scaler.transform(test)\n",
+    "train.loc[:, train.select_dtypes(exclude='int64').columns] = scaler.transform(train.select_dtypes(exclude='int64'))\n",
+    "test.loc[:, test.select_dtypes(exclude='int64').columns] = scaler.transform(test.select_dtypes(exclude='int64'))\n",
     "\n",
     "features_names = list(features.drop(columns=['TARGET', 'SK_ID_CURR'] + no_significant).columns)\n",
     "\n",
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train"
+    "features_names"
    ]
   },
   {
@@ -140,9 +140,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = lgb.Dataset(train, label=target, feature_name=features_names)\n",
-    "train_data = lgb.Dataset(X_train, label=y_train, feature_name=features_names)\n",
+    "train = lgb.Dataset(train, label=target, feature_name=features_names, categorical_feature=[1,2,4], free_raw_data=False)\n",
+    "train_data = lgb.Dataset(X_train, label=y_train, feature_name=features_names, categorical_feature=[1,2,4], free_raw_data=False)\n",
     "test_data = lgb.Dataset(X_test, label=y_test, feature_name=features_names, reference=train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LightGBM"
    ]
   },
   {
@@ -163,7 +179,8 @@
     "        'bagging_fraction': trial.suggest_uniform('bagging_fraction', 0.4, 1.0),\n",
     "        'bagging_freq': trial.suggest_int('bagging_freq', 1, 7),\n",
     "        'min_child_samples': trial.suggest_int('min_child_samples', 5, 100),\n",
-    "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 1000, 100000)\n",
+    "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 1000, 100000),\n",
+    "        \n",
     "    }\n",
     "    \n",
     "    evals_results = dict()\n",
@@ -208,55 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from optuna.visualization import plot_optimization_history \n",
-    "plot_optimization_history(study)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from optuna.visualization import plot_parallel_coordinate\n",
-    "plot_parallel_coordinate(study)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_parallel_coordinate(study, params=['bagging_fraction', 'bagging_freq'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_parallel_coordinate(study, params=['lambda_l1', 'lambda_l2'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from optuna.visualization import plot_contour\n",
-    "plot_contour(study, params=['lambda_l1', 'lambda_l2'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_contour(study, params=['bagging_fraction', 'feature_fraction'])"
+    "train"
    ]
   },
   {
@@ -268,26 +237,8 @@
     "param = study.best_params\n",
     "param['metric'] = 'auc'\n",
     "param['objective'] = 'binary'\n",
-    "evals_results = dict()\n",
     "\n",
-    "bst = lgb.train(param, train, num_boost_round=250)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bst.predict(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "bst = lgb.train(param, train, num_boost_round=250)\n",
     "app_test = pd.read_csv('../data/raw/application_test.csv')\n",
     "res = app_test[['SK_ID_CURR']].copy()\n",
     "res['TARGET'] = bst.predict(test)\n",
@@ -299,17 +250,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Score Kaggle : 0.74005\n",
-    "\n",
-    "Update : 0.74148 (15 variables)"
+    "### XGBoost"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### NGBoost"
+   ]
   }
  ],
  "metadata": {
