final checkpoint for analysis. Clean repo for final submission

--- a/notebooks/1.0-tg-initial-EDA.ipynb
+++ b/notebooks/1.0-tg-initial-EDA.ipynb
@@ -209,6 +209,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app_train['OCCUPATION_TYPE'].unique()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1005,6 +1014,58 @@
    "source": [
     "distplot(app_train['AMT_CREDIT'] / app_train['AMT_INCOME_TOTAL'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "previous"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distplot(previous['DAYS_TERMINATION'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distplot(previous[previous['DAYS_TERMINATION'] < 10000]['DAYS_TERMINATION'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distplot(previous[previous['DAYS_TERMINATION'] > 10000]['DAYS_TERMINATION'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "previous.iloc[111]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
