--- a/notebooks/3.0-tg-final-model.ipynb
+++ b/notebooks/3.0-tg-final-model.ipynb
@@ -309,6 +309,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
