--- a/notebooks/2.0-feature-engineering.ipynb
+++ b/notebooks/2.0-feature-engineering.ipynb
@@ -24,6 +24,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def distplot(series, **kwargs):\n",
+    "    \"\"\"Create a figure with two subplots.\n",
+    "    The lower part of the figure is distplot and the upper part display\n",
+    "    a box plot for the same sample.\n",
+    "\n",
+    "    :arg:\n",
+    "        series (pd.Series): The sample you want to plot.\n",
+    "        kwargs : all keyword argument accepted by seaborn.distplot.\n",
+    "    \"\"\"\n",
+    "    # Cut the window in 2 parts\n",
+    "    kwrgs = {\"height_ratios\": (.15, .85)}\n",
+    "    f, (ax_box, ax_hist) = plt.subplots(2, sharex=True, figsize=(8, 8),\n",
+    "                                        gridspec_kw=kwrgs)\n",
+    "\n",
+    "    # Add a graph in each part\n",
+    "    sns.boxplot(series, ax=ax_box)\n",
+    "    sns.distplot(series, ax=ax_hist, **kwargs)\n",
+    "\n",
+    "    # Remove x axis name for the boxplot\n",
+    "    ax_box.set(xlabel='')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data = dict()\n",
     "for dirname, _, filenames in os.walk('../data/raw'):\n",
     "    for filename in filenames:\n",
@@ -73,7 +101,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Manual feature engineering"
+    "## Manual feature engineering\n",
+    "\n",
+    "On reprend les quelques variables qui ont le plus de sens. Voir Notebook '1.0-tg-initial-EDA'"
    ]
   },
   {
@@ -84,7 +114,7 @@
    "source": [
     "features = app_train[['SK_ID_CURR', \n",
     "                      'DAYS_BIRTH', # Age\n",
-    "                      'CODE_GENDER', # Sex\n",
+    "                      #'CODE_GENDER', # Sex\n",
     "                      'OCCUPATION_TYPE', # Job\n",
     "                      'AMT_INCOME_TOTAL', # Revenues\n",
     "                      'AMT_CREDIT', # Credit amount\n",
@@ -97,7 +127,7 @@
     "\n",
     "features_test = app_test[['SK_ID_CURR', \n",
     "                          'DAYS_BIRTH', # Age\n",
-    "                          'CODE_GENDER', # Sex\n",
+    "                          #'CODE_GENDER', # Sex\n",
     "                          'OCCUPATION_TYPE', # Job\n",
     "                          'AMT_INCOME_TOTAL', # Revenues\n",
     "                          'AMT_CREDIT', # Credit amount\n",
@@ -125,6 +155,24 @@
    "outputs": [],
    "source": [
     "features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features['DAYS_BIRTH'] = features['DAYS_BIRTH'] / -365"
    ]
   },
   {
@@ -205,7 +253,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_late.astype('bool').describe()"
+    "bureau = pd.merge(bureau, count_late, left_on='SK_ID_BUREAU', right_on='SK_ID_BUREAU')\n",
+    "bureau.rename(columns={\"STATUS\": 'REPORTED_DPD'}, inplace=True)"
    ]
   },
   {
@@ -214,8 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bureau = pd.merge(bureau, count_late, left_on='SK_ID_BUREAU', right_on='SK_ID_BUREAU')\n",
-    "bureau.rename(columns={\"STATUS\": 'REPORTED_DPD'}, inplace=True)"
+    "bureau"
    ]
   },
   {
@@ -244,6 +292,26 @@
    "outputs": [],
    "source": [
     "features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No significant features.\n",
+    "# From feature importance with LightGBM\n",
+    "features.drop(columns=['CREDIT_ACTIVE_Bad debt', 'CREDIT_ACTIVE_Sold'], inplace=True)"
    ]
   },
   {
@@ -421,6 +489,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "features.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "features['TOTAL_PREV_HC'] = previous[['SK_ID_CURR', 'IS_ACTIVE']].groupby('SK_ID_CURR').count()"
    ]
   },
@@ -440,6 +517,56 @@
    "outputs": [],
    "source": [
     "features.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = features.join(app_train.set_index('SK_ID_CURR')['TARGET'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features.to_csv('../data/processed/features.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_features = [\"CREDIT_ACTIVE_Active\",\n",
+    "                \"CREDIT_ACTIVE_Closed\",\n",
+    "                \"REPORTED_DPD\",\n",
+    "                \"BAD_PAYMENT_HC\",\n",
+    "                \"ACTIVE_CRED_HC\",\n",
+    "                \"TOTAL_PREV_HC\"]\n",
+    "for feature in new_features:\n",
+    "    distplot(features[feature])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Baseline"
    ]
   },
   {
@@ -526,8 +653,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/interim/labels_encod.pickle', 'wb') as f:\n",
-    "    pickle.dump(label_encoders, f)"
+    "features_le = features_le.join(app_train.set_index('SK_ID_CURR')['TARGET'])\n",
+    "features_ohe = features_ohe.join(app_train.set_index('SK_ID_CURR')['TARGET'])"
    ]
   },
   {
@@ -536,8 +663,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features_le = features_le.join(app_train.set_index('SK_ID_CURR')['TARGET'])\n",
-    "features_ohe = features_ohe.join(app_train.set_index('SK_ID_CURR')['TARGET'])"
+    "features_ohe"
    ]
   },
   {
@@ -613,6 +739,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features.to_csv('../data/interim/features.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -677,6 +812,25 @@
     "\n",
     "print(f'train set shape : {train.shape}')\n",
     "print(f'test set shape : {test.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_le"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(train, columns=features_names, index=app_train['SK_ID_CURR'])\\\n",
+    "    .join(app_train[['SK_ID_CURR', 'TARGET']].set_index(\"SK_ID_CURR\"))"
    ]
   },
   {
@@ -836,7 +990,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "baseline_results = app_test[['SK_ID_CURR']]\n",
+    "baseline_results = app_test[['SK_ID_CURR']].copy()\n",
     "baseline_results['TARGET'] = bst.predict(test)\n",
     "path = os.path.join(os.path.abspath('../reports/'), 'lgbm_early_stop.csv')\n",
     "baseline_results.to_csv(path, index=False)"
@@ -849,6 +1003,113 @@
     "### Résultats LightGBM \n",
     "\n",
     "**ROC_AUC = 0.73572**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = features_ohe[features_ohe['TARGET'].notna()].copy()\n",
+    "test = features_ohe[features_ohe['TARGET'].isna()].copy()\n",
+    "target = train['TARGET']\n",
+    "train.drop(columns=['TARGET'], inplace=True)\n",
+    "test.drop(columns=['TARGET'], inplace=True)\n",
+    "\n",
+    "\n",
+    "imputer = SimpleImputer(strategy='constant', fill_value=0)\n",
+    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
+    "imputer.fit(train)\n",
+    "scaler.fit(train)\n",
+    "\n",
+    "train = imputer.transform(train)\n",
+    "test = imputer.transform(test)\n",
+    "\n",
+    "train = scaler.transform(train)\n",
+    "test = scaler.transform(test)\n",
+    "\n",
+    "features_names = list(features_ohe.drop(columns=['TARGET']).columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(train, target) \n",
+    "clf = RandomForestClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = clf.predict_proba(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_auc_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roc_auc_score(y_test.values, res[:, 1])"
    ]
   },
   {
@@ -994,43 +1255,6 @@
    "outputs": [],
    "source": [
     "features_le"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../data/interim/labels_encod.pickle', 'rb') as f:\n",
-    "    dic = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dic.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "le.inverse_transform(np.array([1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features.values.flags"
    ]
   }
  ],
