--- a/notebooks/4.0-tg-models-comparison.ipynb
+++ b/notebooks/4.0-tg-models-comparison.ipynb
@@ -7,24 +7,48 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import time\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "import xgboost as xbgµ\n",
-    "import lightgbm as lgb\n",
-    "\n",
     "# sklearn API like\n",
-    "from ngboost import NGBRegressor\n",
+    "from ngboost import NGBClassifier\n",
+    "from lightgbm.sklearn import LGBMClassifier\n",
+    "from xgboost.sklearn import XGBClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.svm import SVC\n",
     "\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
+    "from sklearn.metrics import roc_auc_score, make_scorer\n",
+    "from sklearn.model_selection import learning_curve\n",
     "import optuna \n",
+    "import pickle\n",
     "\n",
+    "sns.set(font_scale=1.5, rc={\"figure.figsize\": (12, 8)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LabelEncoder(LabelEncoder):\n",
+    "    \"\"\"Override the LabelEncoder in order to use it on pipeline.\"\"\"\n",
     "\n",
-    "sns.set()"
+    "    def fit_transform(self, y, *args, **kwargs):\n",
+    "        return super().fit_transform(np.array(y).ravel()).reshape(-1, 1)\n",
+    "\n",
+    "    def transform(self, y, *args, **kwargs):\n",
+    "        return super().transform(np.array(y).ravel()).reshape(-1, 1)"
    ]
   },
   {
@@ -42,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_train_sample = pd.read_csv('../data/raw/application_train.csv', nrows=1)"
+    "features.set_index('SK_ID_CURR', inplace=True, drop=True)"
    ]
   },
   {
@@ -51,7 +75,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "categ_var = ['NAME_CONTRACT_TYPE', 'CODE_GENDER', 'OCCUPATION_TYPE']"
+    "features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Drop observation with missing AMT_ANNUITY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Original shape %s' % features.shape[0])\n",
+    "features = features[features['AMT_ANNUITY'].notnull()]\n",
+    "print('New shape %i' % features.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Missing values in Category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = features.copy()\n",
+    "features['OCCUPATION_TYPE'].replace(np.nan, 'unknown', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Missing values in Integer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "integer_features = []\n",
+    "for col in features.columns:\n",
+    "    if col.startswith('CREDIT_ACTIVE') or col.endswith('_HC') or col == 'REPORTED_DPD':\n",
+    "        features[col].replace(np.nan, 0, inplace=True)\n",
+    "        integer_features.append(col)"
    ]
   },
   {
@@ -61,8 +149,8 @@
    "outputs": [],
    "source": [
     "for col in features.columns:\n",
-    "    if col not in app_train_sample.columns:\n",
-    "        features[col].fillna(0, inplace=True)"
+    "    if not len(list(features[col].dropna().index)) == len(list(features.index)):\n",
+    "        print(col)"
    ]
   },
   {
@@ -71,46 +159,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features['DAYS_BIRTH'] = - features['DAYS_BIRTH'] / 365"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "no_significant = ['CREDIT_ACTIVE_Sold', 'CREDIT_ACTIVE_Bad debt', 'AMT_INCOME_TOTAL']\n",
-    "train = features[features['TARGET'].notna()].copy()\n",
-    "test = features[features['TARGET'].isna()].copy()\n",
-    "target = train['TARGET']\n",
-    "train.drop(columns=['TARGET', 'SK_ID_CURR'], inplace=True)\n",
-    "test.drop(columns=['TARGET', 'SK_ID_CURR'], inplace=True)\n",
-    "train.drop(columns=no_significant, inplace=True)\n",
-    "test.drop(columns=no_significant, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imputer = SimpleImputer(strategy='median')\n",
-    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
-    "imputer.fit(train.select_dtypes(exclude='int64'))\n",
-    "scaler.fit(train.select_dtypes(exclude='int64'))\n",
+    "to_scale = integer_features\n",
+    "to_scale += ['DAYS_BIRTH', \n",
+    "             'AMT_INCOME_TOTAL', \n",
+    "             'AMT_CREDIT', \n",
+    "             'AMT_ANNUITY']\n",
+    "to_impute = ['EXT_SOURCE_1',\n",
+    "             'EXT_SOURCE_2',\n",
+    "             'EXT_SOURCE_3']\n",
     "\n",
-    "train.loc[:, train.select_dtypes(exclude='int64').columns] = imputer.transform(train.select_dtypes(exclude='int64'))\n",
-    "test.loc[:, test.select_dtypes(exclude='int64').columns]  = imputer.transform(test.select_dtypes(exclude='int64'))\n",
-    "\n",
-    "train.loc[:, train.select_dtypes(exclude='int64').columns] = scaler.transform(train.select_dtypes(exclude='int64'))\n",
-    "test.loc[:, test.select_dtypes(exclude='int64').columns] = scaler.transform(test.select_dtypes(exclude='int64'))\n",
-    "\n",
-    "features_names = list(features.drop(columns=['TARGET', 'SK_ID_CURR'] + no_significant).columns)\n",
-    "\n",
-    "print(f'train set shape : {train.shape}')\n",
-    "print(f'test set shape : {test.shape}')"
+    "column_trans = ColumnTransformer(\n",
+    "    [('occupation', OneHotEncoder(dtype=int), ['OCCUPATION_TYPE']),\n",
+    "     ('contract_type', LabelEncoder(), ['NAME_CONTRACT_TYPE']),\n",
+    "     ('integer_features', MinMaxScaler(), integer_features),\n",
+    "     ('ext_source', SimpleImputer(strategy='median'), to_impute)\n",
+    "    ], remainder='passthrough'\n",
+    ")"
    ]
   },
   {
@@ -119,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features_names"
+    "column_trans.fit_transform(features).shape"
    ]
   },
   {
@@ -128,10 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(train, target)\n",
-    "\n",
-    "print(f'train set shape : {X_train.shape}')\n",
-    "print(f'test set shape : {X_test.shape}')"
+    "column_trans.fit(features.drop(columns='TARGET'))"
    ]
   },
   {
@@ -140,9 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = lgb.Dataset(train, label=target, feature_name=features_names, categorical_feature=[1,2,4], free_raw_data=False)\n",
-    "train_data = lgb.Dataset(X_train, label=y_train, feature_name=features_names, categorical_feature=[1,2,4], free_raw_data=False)\n",
-    "test_data = lgb.Dataset(X_test, label=y_test, feature_name=features_names, reference=train_data)"
+    "features.shape"
    ]
   },
   {
@@ -151,14 +210,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### LightGBM"
+    "with open('../models/preprocessing_pipeline.pickle', 'wb') as f:\n",
+    "    pickle.dump(column_trans, f)\n",
+    "features.to_csv('../data/processed/features_final.csv')"
    ]
   },
   {
@@ -167,28 +221,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def objective(trial):\n",
-    "    param = {\n",
-    "        'objective': 'binary',\n",
-    "        'metric': 'auc',\n",
-    "        'verbosity': -1,\n",
-    "        'lambda_l1': trial.suggest_loguniform('lambda_l1', 1e-8, 10.0),\n",
-    "        'lambda_l2': trial.suggest_loguniform('lambda_l2', 1e-8, 10.0),\n",
-    "        'num_leaves': trial.suggest_int('num_leaves', 2, 256),\n",
-    "        'feature_fraction': trial.suggest_uniform('feature_fraction', 0.4, 1.0),\n",
-    "        'bagging_fraction': trial.suggest_uniform('bagging_fraction', 0.4, 1.0),\n",
-    "        'bagging_freq': trial.suggest_int('bagging_freq', 1, 7),\n",
-    "        'min_child_samples': trial.suggest_int('min_child_samples', 5, 100),\n",
-    "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 1000, 100000),\n",
-    "        \n",
-    "    }\n",
+    "x_transformed = column_trans.fit_transform(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = {'RandomForest': RandomForestClassifier(n_estimators=10, max_depth=75, max_features=10, max_leaf_nodes=50),\n",
+    "#           'SVC': SVC(kernel='linear', cache_size=7000), # Take a long time to fit...\n",
+    "          'AdaBoost': AdaBoostClassifier(),\n",
+    "          'XGBoot': XGBClassifier(),\n",
+    "          'LGBM': LGBMClassifier(),\n",
+    "          'NGBM': NGBClassifier()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = column_trans.fit_transform(features[features['TARGET'].notnull()].drop(columns='TARGET'))\n",
+    "y = features[features['TARGET'].notnull()]['TARGET'].astype('int8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+    "print('train shape %i' % X_train.shape[0])\n",
+    "print('test shape %i' % X_test.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_learning_curve(estimator, title, X, y, axes=None, cv=None, train_sizes=None):\n",
+    "    if axes is None:\n",
+    "        _, ax = plt.subplots(1)\n",
+    "    ax.set_title(title)\n",
+    "    ax.set_xlabel(\"Training examples\")\n",
+    "    ax.set_ylabel(\"Score\")\n",
     "    \n",
-    "    evals_results = dict()\n",
+    "    scorer = make_scorer(roc_auc_score, needs_proba=True)\n",
+    "    train_sizes, train_scores, valid_scores = learning_curve(estimator, X, y, cv=cv, scoring=scorer)\n",
     "    \n",
-    "    bst = lgb.train(param, train_data, verbose_eval=-1, evals_result=evals_results,\n",
-    "                    valid_sets=[train_data, test_data], early_stopping_rounds=30,\n",
-    "                    num_boost_round=1000)\n",
-    "    return bst.best_score['valid_1']['auc']"
+    "    train_scores_mean = np.mean(train_scores, axis=1)\n",
+    "    valid_scores_mean = np.mean(valid_scores, axis=1)\n",
+    "    train_scores_std = np.std(train_scores, axis=1)\n",
+    "    valid_scores_std = np.std(valid_scores, axis=1)\n",
+    "    \n",
+    "    ax.plot(train_sizes, train_scores_mean, label='Train score')\n",
+    "    ax.plot(train_sizes, valid_scores_mean, label='Valid score')\n",
+    "    \n",
+    "    ax.fill_between(train_sizes, train_scores_mean + train_scores_std,\n",
+    "                    train_scores_mean - train_scores_std, alpha=0.2)\n",
+    "    ax.fill_between(train_sizes, valid_scores_mean + valid_scores_std,\n",
+    "                    valid_scores_mean - valid_scores_std, alpha=0.2)\n",
+    "    plt.legend()\n",
+    "    plt.show()"
    ]
   },
   {
@@ -197,8 +297,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction='maximize')\n",
-    "study.optimize(objective, n_trials=100)"
+    "scores = dict()\n",
+    "fitting_time = dict()"
    ]
   },
   {
@@ -207,7 +307,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study.best_trial"
+    "for name, m in models.items():\n",
+    "    start = time.time()\n",
+    "    print(\"Fitting %s\" % name)\n",
+    "    m.fit(X_train, y_train)\n",
+    "    fitting_time[name] = time.time() - start\n",
+    "    y_pred = m.predict_proba(X_test)[:, 1]\n",
+    "    score = roc_auc_score(y_test, y_pred)\n",
+    "    print('ROC_AUC score %f' % score)\n",
+    "    scores[name] = score"
    ]
   },
   {
@@ -216,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study.best_params"
+    "scores"
    ]
   },
   {
@@ -225,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train"
+    "fitting_time"
    ]
   },
   {
@@ -234,31 +342,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param = study.best_params\n",
-    "param['metric'] = 'auc'\n",
-    "param['objective'] = 'binary'\n",
-    "\n",
-    "bst = lgb.train(param, train, num_boost_round=250)\n",
-    "app_test = pd.read_csv('../data/raw/application_test.csv')\n",
-    "res = app_test[['SK_ID_CURR']].copy()\n",
-    "res['TARGET'] = bst.predict(test)\n",
-    "path = os.path.join(os.path.abspath('../reports/'), 'lgbm_opt_15_var.csv')\n",
-    "res.to_csv(path, index=False)"
+    "title = 'Learning curve %s' % 'LightGBM'\n",
+    "plot_learning_curve(models['LGBM'], title, X, y, cv=5)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### XGBoost"
+    "model = LGBMClassifier()\n",
+    "model.fit(X, y)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### NGBoost"
+    "with open('../models/model_v0.pickle', 'wb') as f:\n",
+    "    pickle.dump(model, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
