Finalizing notebooks and report

--- a/notebooks/1.0-tg-initial-EDA.ipynb
+++ b/notebooks/1.0-tg-initial-EDA.ipynb
@@ -497,7 +497,9 @@
    "outputs": [],
    "source": [
     "sns.kdeplot(ext_data[ext_data['TARGET'] == 0]['EXT_SOURCE_1'], label='repaid')\n",
-    "sns.kdeplot(ext_data[ext_data['TARGET'] == 1]['EXT_SOURCE_1'], label='default')"
+    "ax = sns.kdeplot(ext_data[ext_data['TARGET'] == 1]['EXT_SOURCE_1'], label='default')\n",
+    "ax.set(xlabel='Ext source 1')\n",
+    "ax.set(ylabel='Fréquence')"
    ]
   },
   {
@@ -507,7 +509,9 @@
    "outputs": [],
    "source": [
     "sns.kdeplot(ext_data[ext_data['TARGET'] == 0]['EXT_SOURCE_2'], label='repaid')\n",
-    "sns.kdeplot(ext_data[ext_data['TARGET'] == 1]['EXT_SOURCE_2'], label='default')"
+    "ax = sns.kdeplot(ext_data[ext_data['TARGET'] == 1]['EXT_SOURCE_2'], label='default')\n",
+    "ax.set(xlabel='Ext source 2')\n",
+    "ax.set(ylabel='Fréquence')"
    ]
   },
   {
@@ -517,7 +521,9 @@
    "outputs": [],
    "source": [
     "sns.kdeplot(ext_data[ext_data['TARGET'] == 0]['EXT_SOURCE_3'], label='repaid')\n",
-    "sns.kdeplot(ext_data[ext_data['TARGET'] == 1]['EXT_SOURCE_3'], label='default')"
+    "ax = sns.kdeplot(ext_data[ext_data['TARGET'] == 1]['EXT_SOURCE_3'], label='default')\n",
+    "ax.set(xlabel='Ext source 3')\n",
+    "ax.set(ylabel='Fréquence')"
    ]
   },
   {
