--- a/notebooks/2.0-feature-engineering.ipynb
+++ b/notebooks/2.0-feature-engineering.ipynb
@@ -648,25 +648,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features_le = features_le.join(app_train.set_index('SK_ID_CURR')['TARGET'])\n",
-    "features_ohe = features_ohe.join(app_train.set_index('SK_ID_CURR')['TARGET'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features_ohe"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -839,16 +820,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/interim/scalers.pickle', 'wb') as f:\n",
-    "    pickle.dump(scaler, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "train_data = lgb.Dataset(train, label=target, \n",
     "                         feature_name=features_names,\n",
     "                         categorical_feature=categ_var)\n",
@@ -1009,113 +980,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Random forest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import RandomForestClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train = features_ohe[features_ohe['TARGET'].notna()].copy()\n",
-    "test = features_ohe[features_ohe['TARGET'].isna()].copy()\n",
-    "target = train['TARGET']\n",
-    "train.drop(columns=['TARGET'], inplace=True)\n",
-    "test.drop(columns=['TARGET'], inplace=True)\n",
-    "\n",
-    "\n",
-    "imputer = SimpleImputer(strategy='constant', fill_value=0)\n",
-    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
-    "imputer.fit(train)\n",
-    "scaler.fit(train)\n",
-    "\n",
-    "train = imputer.transform(train)\n",
-    "test = imputer.transform(test)\n",
-    "\n",
-    "train = scaler.transform(train)\n",
-    "test = scaler.transform(test)\n",
-    "\n",
-    "features_names = list(features_ohe.drop(columns=['TARGET']).columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(train, target) \n",
-    "clf = RandomForestClassifier()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = clf.predict_proba(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import roc_auc_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "roc_auc_score(y_test.values, res[:, 1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Interprétabilité du modèle"
    ]
   },
@@ -1198,7 +1062,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shap.force_plot(explainer.expected_value,\n",
+    "plot = shap.force_plot(explainer.expected_value,\n",
     "                shap_values[0,:], features=sample_data.iloc[0, :])"
    ]
   },
@@ -1208,7 +1072,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_train[app_train['SK_ID_CURR'] == 362145]"
+    "shap.save_html('../reports/figures/explainer_single.html', plot)"
    ]
   },
   {
@@ -1217,7 +1081,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shap.force_plot(explainer.expected_value,\n",
+    "plot = shap.force_plot(explainer.expected_value,\n",
     "                shap_values, features=sample_data)"
    ]
   },
@@ -1227,34 +1091,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "shap.save_html('../reports/figures/explainer_multi.html', plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "features_le.to_csv('../data/processed/features.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "categ_var"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bst.save_model('../models/booster_V0.txt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features_le"
    ]
   }
  ],
