--- a/notebooks/4.0-tg-models-comparison.ipynb
+++ b/notebooks/4.0-tg-models-comparison.ipynb
@@ -233,8 +233,8 @@
     "models = {'RandomForest': RandomForestClassifier(n_estimators=10, max_depth=75, max_features=10, max_leaf_nodes=50),\n",
     "#           'SVC': SVC(kernel='linear', cache_size=7000), # Take a long time to fit...\n",
     "          'AdaBoost': AdaBoostClassifier(),\n",
-    "          'XGBoot': XGBClassifier(),\n",
-    "          'LGBM': LGBMClassifier(),\n",
+    "          'XGBoost': XGBClassifier(),\n",
+    "          'LightGBM': LGBMClassifier(),\n",
     "          'NGBM': NGBClassifier()}"
    ]
   },
@@ -342,8 +342,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "scores = {k: v for k, v in sorted(scores.items(), key=lambda item: item[1])}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_plot = pd.DataFrame({\"Modèle\": list(scores.keys()),\n",
+    "                          \"Score\": list(scores.values())})\n",
+    "data_plot_2 = pd.DataFrame({\"Modèle\": list(fitting_time.keys()),\n",
+    "                            \"Fitting time\": list(fitting_time.values())})\n",
+    "data_plot.set_index('Modèle', inplace=True)\n",
+    "data_plot_2.set_index('Modèle', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_plot = pd.concat([data_plot, data_plot_2], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_plot.reset_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_plot.rename(columns={'index': 'Modèle'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = sns.barplot(data=data_plot, \n",
+    "                 y='Modèle', \n",
+    "                 x='Score', \n",
+    "                 color='cornflowerblue')\n",
+    "ax.set(xlabel='Score ROC AUC')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = sns.barplot(data=data_plot, y='Modèle', x='Fitting time', color='cornflowerblue')\n",
+    "ax.set(xlabel='Temps de calcul CPU pour entrainement en seconde')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "title = 'Learning curve %s' % 'LightGBM'\n",
-    "plot_learning_curve(models['LGBM'], title, X, y, cv=5)"
+    "plot_learning_curve(models['LightGBM'], title, X, y, cv=5)"
    ]
   },
   {
@@ -354,6 +436,62 @@
    "source": [
     "model = LGBMClassifier()\n",
     "model.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.feature_importances_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lightgbm as lgb\n",
+    "\n",
+    "lgb.plot_importance(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features.columns[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.feature_importances_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_importance = {x: y for x, y in zip(features.columns[:-1], model.feature_importances_)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_importance"
    ]
   },
   {
